--- a/data/coco128_plantuse.yaml
+++ b/data/coco128_plantuse.yaml
@@ -8,13 +8,13 @@
 
 
 # Train/val/test sets as 1) dir: path/to/imgs, 2) file: path/to/imgs.txt, or 3) list: [path/to/imgs1, path/to/imgs2, ..]
-path: ../plant-all-2  # dataset root dir
+path: ../datasets  # dataset root dir
 train: train/images  # train images (relative to 'path') 128 images./plant-all-2/train
 val: valid/images  # val images (relative to 'path') 128 images./plant-all-2/valid
 test:  # test images (optional)
 
 # Classes
-nc:   # number of classes
+nc: 8 # number of classes
 names: ['LBOTM', 'TA', 'TAS', 'TCD', 'TCRS', 'TNCD','TRRAD','TRS']  # class names
 
 
